--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "crypto-js": "^4.1.1",
@@ -22,14 +24,20 @@
     "helmet": "^4.6.0",
     "jimp": "^0.16.1",
     "joi": "^17.4.2",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.16",
     "mkdirp": "^1.0.4",
     "mongoose": "^6.0.11",
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "query-string": "^7.1.1",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
